RESOLVED FIXED51691
[GTK] GSettings warning is concealing real warnings on the build bots
https://bugs.webkit.org/show_bug.cgi?id=51691
Summary [GTK] GSettings warning is concealing real warnings on the build bots
Martin Robinson
Reported 2010-12-28 14:49:00 PST
Warnings about GSettings about very common the build bots. This ends up concealing real warnings, because there are so many tests with stderr output. Here is the output text: GSettings schema not found - settings will not be used or saved. GSettings schema not found - settings will not be used or saved. GSettings schema not found - settings will not be used or saved.
Attachments
Patch for this issue (1.59 KB, patch)
2010-12-28 14:50 PST, Martin Robinson
no flags
An alternate approach to this problem (2.44 KB, patch)
2010-12-29 08:40 PST, Martin Robinson
no flags
Martin Robinson
Comment 1 2010-12-28 14:50:50 PST
Created attachment 77581 [details] Patch for this issue
Eric Seidel (no email)
Comment 2 2010-12-28 20:18:41 PST
Comment on attachment 77581 [details] Patch for this issue OK. It's sad that that's the only way to disable the message. Is that string saved anywhere in Gtk that you could compare against a variable instead of a manually typed c-string?
Martin Robinson
Comment 3 2010-12-29 08:40:01 PST
Created attachment 77621 [details] An alternate approach to this problem
Martin Robinson
Comment 4 2010-12-29 08:44:13 PST
(In reply to comment #3) > Created an attachment (id=77621) [details] > An alternate approach to this problem Here's another way to approach the issue. Instead of filtering the message in DumpRenderTree, this patch modifies WebKitGTK+ to not print the message when running in DumpRenderTree.
Xan Lopez
Comment 5 2010-12-29 14:13:33 PST
Comment on attachment 77621 [details] An alternate approach to this problem I prefer this one by a long shot.
Martin Robinson
Comment 6 2010-12-29 14:34:49 PST
Comment on attachment 77621 [details] An alternate approach to this problem Clearing flags on attachment: 77621 Committed r74762: <http://trac.webkit.org/changeset/74762>
Martin Robinson
Comment 7 2010-12-29 14:34:53 PST
All reviewed patches have been landed. Closing bug.
WebKit Review Bot
Comment 8 2010-12-29 15:38:33 PST
http://trac.webkit.org/changeset/74762 might have broken Leopard Intel Debug (Tests)
Note You need to log in before you can comment on or make changes to this bug.